# ai-stator-inspection

./: .gitignore  Compute_fit.py  Decision_Tress.py  Iris_PDT.py  Probabilistic_DT.py  README.md  app.py  create_fake_data.py  data_model.py  iris_viz.py  kmeans_main.py  main.py  probabilistic_decision_tree_model_Steel_Faults.joblib  pyproject.toml  requirements.txt  steel_faults_PDT.py  steel_faults_viz.py  vw_sample_data_PDT.py  vw_sample_data_viz.py
.github/workflows/: ci.yml
app/: __init__.py  ai_analysis.py  navigation.py  streamlit_app.py  ui.py
app/pages/: __init__.py  clustering.py  data_understanding.py  decision_tree.py  iris.py  probabilistic_tree.py  steel_faults.py  volkswagen.py
clustering/: k_means.py
docs/: architecture.md  deployment.md  model_artifacts.md  portfolio_release.md  release_verification.md  reproducibility.md  roadmap.md
src/: __init__.py
src/config/: __init__.py  paths.py
src/data/: __init__.py  loaders.py
tests/: test_app_structure.py  test_ci_configuration.py  test_data_model.py  test_deployment_configuration.py  test_feature_facades.py  test_feature_transformations.py  test_imports.py  test_loaders.py  test_model_artifact_registry.py  test_model_workflows.py  test_navigation.py  test_page_controllers.py  test_paths.py  test_portfolio_release.py  test_prediction_contracts.py  test_project_files.py  test_reproducibility_docs.py  test_runtime_model_safety.py  test_session_state_isolation.py  test_streamlit_entrypoint.py  test_streamlit_workflows.py  test_tree_analysis_service.py  test_ui.py  test_visualization_helpers.py
(+18 files in other folders)
