[project]
name = "pmv4-analytics"
version = "0.1.0"
description = "Streamlit dashboard for synthetic manufacturing, Iris, steel faults, and Volkswagen probabilistic decision tree analysis."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "graphviz==0.20.3",
    "joblib==1.4.2",
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "openai==1.78.1",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "plotly==6.0.1",
    "scikit-learn==1.6.1",
    "streamlit==1.44.1",
    "streamlit-cropper",
    "streamlit-cropperjs==0.0.9",
    "streamlit-elements==0.1.0",
    "streamlit-flow==0.1.0",
    "streamlit-flow-component==1.6.1",
    "streamlit-option-menu==0.4.0",
    "watchdog==6.0.0",
    "XlsxWriter==3.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
